# Agent-Safety-Boundary-Kit

./: README.md  SPEC.md  pyproject.toml  requirements.md  research.md
.agents/plugins/: marketplace.json
core/: boundary-model.md  operating-flow.md
examples/: voice-call-boundary.yaml
examples/requests/: confirmation-email.json  default-disclosure.json  home-address.json  non-refundable-commitment.json  payment-card.json  preapproved-restaurant-deposit.json
integrations/codex/: README.md
plugins/agent-safety-boundary-kit/.codex-plugin/: plugin.json
plugins/agent-safety-boundary-kit/scripts/: boundary_check.py
schemas/: boundary.schema.json  request.schema.json
scripts/: boundary_check.py
skills/agent-safety-boundary/: SKILL.md
tests/: test_boundary_check.py
