[project]
name = "agent-safety-boundary-kit"
version = "0.1.0"
description = "A small checker and skill kit for delegated-authority boundaries in user-facing agents."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6"]
dev = []

[project.scripts]
boundary-check = "boundary_check:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["boundary_check"]

[tool.setuptools.package-dir]
"" = "scripts"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
